# Luitzen

./: README  luitzen.cabal
src/: Environment.hs  Equal.hs  LayoutToken.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeCheck.hs
test/: Bool.pi  Equality.pi  Fin.pi  Inconsistent.pi  Integer.pi  Makefile  Nat.pi  Product.pi  Rational.pi  Squash.pi  Truncation.pi  Union.pi  Vec.pi
