Name: luitzen
Version: 0.1
License: BSD3
License-file: LICENSE
Copyright: (c) 2013 University of Pennsylvania
Description: An (possibly wrong) implementation of OTT
Author: Jonathan Sterling <jon@jonmsterling.com>, based on code by Stephanie Weirich
Maintainer: Jonathna Sterling <jon@jonmsterling.com>
Cabal-Version: >= 1.2
Build-type: Simple
tested-with: GHC == 7.8.1

library
  hs-source-dirs: src/
  Exposed-modules: Syntax
                   Parser
                   TypeCheck
                   Main
  Build-depends:  base >= 4

executable luitzen
  hs-source-dirs: src/
  Main-is: Main.hs
  Build-depends: base >=4,
                 parsec >= 3.1 && < 3.2,
                 pretty >= 1.0.1.0,
                 RepLib >= 0.5.3 && < 0.6,
                 unbound >= 0.4.2 && < 0.5,
                 mtl,
                 transformers,
                 array >= 0.3.0.2,
                 containers,
                 directory,
                 filepath,
                 bimap == 0.2.4
  Ghc-Options:  -Wall -fno-warn-unused-matches


